k8s/network/ingress-nginx/ingress-notinkube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internalingress-notinkube
  namespace: notinkube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx  # Adjust this if your Ingress class name is different
  tls:
    - hosts:
        - pihole.frittylab.xyz
      secretName: frittylab-tls
  rules:
    - host: adguard.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
